--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main{
-    /* background: black; */
+    /* background: white; */
     /* position: relative; */
     display: block;
     color: white;
