--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     display: block;
     text-align: left !important;
     vertical-align: middle !important;
-    /* padding-top: 5px; */
+    margin-top: 5px;
     margin-right: 19%;
     margin-left: 51%
 }
