--- a/style.css
+++ b/style.css
@@ -16,16 +16,16 @@
     display: block;
     text-align: left !important;
     vertical-align: middle !important;
-    margin-top: 5px;
-    margin-right: 19%;
-    margin-left: 51%
+    /* margin-top: 5px; */
+    /* margin-right: 19%; */
+    /* margin-left: 51% */
 }
 
 .about-me{
     color: white;
     text-shadow: 2px 2px blue;
     padding-bottom: 23px;
-    border-bottom: 2px solid gray;
+    /* border-bottom: 2px solid gray; */
     margin-bottom: 5px
 }
 
